[tool.poetry]
name = "pystarport"
version = "0.2.3"
description = "Spawn local devnets for cosmos-sdk chains"
authors = ["huangyi <huang@crypto.com>"]
license = "Apache"
keywords = ["CRO", "blockchain", "crypto.com", "cosmos"]
readme = "README.md"
homepage = "https://github.com/crypto-com/pystarport"
repository = "https://github.com/crypto-com/pystarport"
include = ["LICENSE", "CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.4.0"
tomlkit = "^0.7.0"
jsonmerge = "^1.7.0"
PyYAML = "^5.3.1"
python-dateutil = "^2.8.1"
durations = "^0.3.3"
supervisor = "^4.2.1"
docker = "^4.3.1"
bech32 = "^1.1.0"
multitail2 = "^1.5.2"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
deepdiff = "^5.6.0"

[tool.poetry.scripts]
pystarport = "pystarport.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
